# launcher

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
common/crc32/: crc32.c  crc32.h
common/encrypt/: encrypt.c  encrypt.h
common/file_pack/: file_pack.c  file_pack.h
encrypt_tool/: CMakeLists.txt  main.c
game_launcher/: CMakeLists.txt  config.c  config.h  dll_loader.c  dll_loader.h  game_launcher.rc  main.cpp  resource.h
launcher_generator/: CMakeLists.txt  launcher_generator.rc  main.cpp  resource.h
plugin_dll/: CMakeLists.txt  plugin.cpp
